--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,13 +6,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title><%= APP_TITLE %></title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- inject:css -->
   <!-- endinject -->
+
+  <!-- Bootstrap CSS -->
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
+
+  <!-- Google Material Design -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+  <!-- LeafletJS -->
+  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css">-->
+
 </head>
 <body>
+  
+  
 
-  <filterable-product-table>Loading...</filterable-product-table>
+  
+  <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>-->
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.js"></script>-->
+  
+  
+  <!--<filterable-product-table>Loading...</filterable-product-table>-->
+  <app-tad></app-tad>
+
+
+
+
 
   <script>
   // Fixes undefined module function in SystemJS bundle
